--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@
                         <li class="guide-step">
                             <h3>Click Installation Alternatives > click virtual machine (OVA)</h3>
                             <p>Select the OVA option for virtual machine deployment.</p>
-                            <!-- Placeholder for image -->
+                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Andrew Buray">
                             <div style="background: #e9ecef; height: 200px; display: flex; align-items: center; justify-content: center; border-radius: 5px; margin: 15px 0;">
                                 <p>Image: Wazuh Installation Alternatives page showing OVA option</p>
                             </div>
@@ -1149,7 +1149,7 @@
                         <li class="guide-step">
                             <h3>Copy the OVA file link</h3>
                             <p>On the package - Right click on wazuh-4.13.0.ova and select "Copy link address".</p>
-                            <!-- Placeholder for image -->
+                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Andrew Buray">
                             <div style="background: #e9ecef; height: 200px; display: flex; align-items: center; justify-content: center; border-radius: 5px; margin: 15px 0;">
                                 <p>Image: Wazuh OVA file with right-click context menu</p>
                             </div>
@@ -1158,7 +1158,7 @@
                         <li class="guide-step">
                             <h3>Access Proxmox server shell</h3>
                             <p>Open your PROXMOX server > select the node > select shell.</p>
-                            <!-- Placeholder for image -->
+                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Andrew Buray">
                             <div style="background: #e9ecef; height: 200px; display: flex; align-items: center; justify-content: center; border-radius: 5px; margin: 15px 0;">
                                 <p>Image: Proxmox interface showing shell option</p>
                             </div>
