--- a/index.html
+++ b/index.html
@@ -1158,7 +1158,7 @@
                         <li class="guide-step">
                             <h3>Access Proxmox server shell</h3>
                             <p>Open your PROXMOX server > select the node > select shell.</p>
-                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Andrew Buray">
+                            <img src="https://github.com/ozborndrew/Portfolio/blob/main/wazuh2.png?raw=true" alt="Andrew Buray">
                             <div style="background: #e9ecef; height: 200px; display: flex; align-items: center; justify-content: center; border-radius: 5px; margin: 15px 0;">
                                 <p>Image: Proxmox interface showing shell option</p>
                             </div>
