--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
                     <li><a href="#" onclick="showSection('about')">About</a></li>
                     <li><a href="#" onclick="showSection('projects')">Projects</a></li>
                     <li><a href="#" onclick="showSection('blog')">Blog</a></li>
-                    <li><a href="#" onclick="showSection('wazuh-guide')">Wazuh Guide</a></li>
+                    <li><a href="#" onclick="showSection('wazuh-guide')">Wazuh Installation Guide</a></li>
                     <li><a href="#" onclick="showSection('others')">Exam Prep</a></li>
                 </ul>
             </nav>
