--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@
     <!-- Hero Section -->
     <section id="hero" class="page-section">
         <div class="container">
-            <h1>Andrew Buray</h1>
+            <h1>Andrew Jr Buray</h1>
             <p>IT Specialist | Network Engineer | Cybersecurity Enthusiast</p>
             <div style="margin-top: 2rem;">
                 <a href="#" class="btn" onclick="showSection('projects')">View My Work</a>
@@ -980,7 +980,6 @@
                                 <li>Proxmox VE</li>
                                 <li>VMware vSphere</li>
                                 <li>Containerization (Docker)</li>
-                                <li>Cloud Platforms (AWS, Azure)</li>
                             </ul>
                         </div>
                         <div class="skill-category">
