--- a/index.html
+++ b/index.html
@@ -994,7 +994,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Andrew Buray">
+                    <img src="https://github.com/ozborndrew/Portfolio/blob/main/andrew.png?raw=true" alt="Andrew Buray">
                 </div>
             </div>
         </div>
