--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andrew Buray - Portfolio with Wazuh Installation Guide</title>
+    <title>Andrew Jr Buray - Portfolio with Wazuh Installation Guide</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* Reset and base styles */
@@ -927,7 +927,7 @@
     <header id="header">
         <div class="container">
             <nav>
-                <div class="logo"><i class="fas fa-laptop-code"></i> Andrew Buray</div>
+                <div class="logo"><i class="fas fa-laptop-code"></i> Andrew Jr Buray</div>
                 <button class="mobile-menu-btn">☰</button>
                 <ul class="nav-links">
                     <li><a href="#" class="active" onclick="showSection('hero')">Home</a></li>
