--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Hello! I'm Andrew Buray, an IT professional with expertise in network engineering, virtualization, and cybersecurity. I have extensive experience working with technologies like Proxmox for virtualization, Cisco networking equipment, and various cybersecurity tools.</p>
+                    <p>Hello! I'm Andrew Jr Buray, an IT professional with expertise in network engineering, virtualization, and cybersecurity. I have extensive experience working with technologies like Proxmox for virtualization, Cisco networking equipment, and various cybersecurity tools.</p>
                     <p>My passion lies in creating efficient, secure IT infrastructures and sharing knowledge through technical documentation and tutorials. I believe in continuous learning and staying updated with the latest industry trends.</p>
                     <p>When I'm not working on IT projects, I enjoy contributing to open-source communities, writing technical blogs, and preparing study materials for certifications like CCNA and cybersecurity fundamentals.</p>
                     
@@ -1375,7 +1375,7 @@ Password: admin</div>
     <footer>
         <div class="container">
             <div class="footer-content">
-                <h3>Andrew Buray</h3>
+                <h3>Andrew Jr Buray</h3>
                 <p>IT Specialist | Network Engineer | Cybersecurity Enthusiast</p>
                 <div class="social-links">
                     <a href="https://github.com/ozborndrew" target="_blank"><i class="fab fa-github"></i></a>
@@ -1383,7 +1383,7 @@ Password: admin</div>
                     <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fas fa-envelope"></i></a>
                 </div>
-                <p>&copy; 2023 Andrew Buray. All rights reserved.</p>
+                <p>&copy; 2025 Andrew Jr Buray. All rights reserved.</p>
             </div>
         </div>
     </footer>
