--- a/index.html
+++ b/index.html
@@ -1312,7 +1312,7 @@ Password: admin</div>
                         <img src="https://images.unsplash.com/photo-1544197150-b99a580bb7a8?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="CCNA Exam Prep">
                     </div>
                     <div class="other-content">
-                        <h3>CCNA Exam Preparation</h3>
+                        <h3>CCNA Exam Preparation Test</h3>
                         <p>Practice tests and study materials for the Cisco Certified Network Associate certification.</p>
                         <a href="https://ozborndrew.github.io/CCNA_Exam/" class="btn" target="_blank">Start Preparing</a>
                     </div>
@@ -1322,7 +1322,7 @@ Password: admin</div>
                         <img src="https://images.unsplash.com/photo-1563013544-824ae1b704d3?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Security+ Exam Prep">
                     </div>
                     <div class="other-content">
-                        <h3>CompTIA Security+ Preparation</h3>
+                        <h3>CompTIA Security+ Preparation Test</h3>
                         <p>Resources to help you prepare for the CompTIA Security+ certification exam.</p>
                         <a href="https://ozborndrew.github.io/CompTIA-Security/" class="btn" target="_blank">Start Preparing</a>
                     </div>
@@ -1332,7 +1332,7 @@ Password: admin</div>
                         <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="IT Service Desk">
                     </div>
                     <div class="other-content">
-                        <h3>IT Service Desk Training</h3>
+                        <h3>IT ServiceDesk Knowledge Test</h3>
                         <p>Training materials for IT service desk professionals and help desk technicians.</p>
                         <a href="https://ozborndrew.github.io/ITServiceDesk/" class="btn" target="_blank">Explore Resources</a>
                     </div>
@@ -1342,7 +1342,7 @@ Password: admin</div>
                         <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc31?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="A+ Exam Prep">
                     </div>
                     <div class="other-content">
-                        <h3>CompTIA A+ Preparation</h3>
+                        <h3>CompTIA A+ Preparation Test</h3>
                         <p>Study materials for the CompTIA A+ certification, the starting point for IT careers.</p>
                         <a href="https://ozborndrew.github.io/CompTIA-A-plus/" class="btn" target="_blank">Start Preparing</a>
                     </div>
@@ -1352,7 +1352,7 @@ Password: admin</div>
                         <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Cybersecurity Prep">
                     </div>
                     <div class="other-content">
-                        <h3>Cybersecurity Preparation</h3>
+                        <h3>Cybersecurity Preparation Test</h3>
                         <p>Practice tests and study guides for various cybersecurity certifications.</p>
                         <a href="https://ozborndrew.github.io/CyberSecPrepTest/" class="btn" target="_blank">Start Preparing</a>
                     </div>
