--- a/index.html
+++ b/index.html
@@ -959,7 +959,8 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Hello! I'm Andrew Jr Buray, an IT professional with expertise in network engineering, virtualization, and cybersecurity. I have extensive experience working with technologies like Proxmox for virtualization, Cisco networking equipment, and various cybersecurity tools.</p>
+                    <p>Hello! I'm Andrew Jr Buray, an IT professional with more than 10 years working experience in handling Network and Server Administration, virtualization in an Enterprise domain environment. </p>
+                    <p>I have extensive experience working with technologies like Proxmox for virtualization, Cisco networking equipment, and various cybersecurity tools.</p>
                     <p>My passion lies in creating efficient, secure IT infrastructures and sharing knowledge through technical documentation and tutorials. I believe in continuous learning and staying updated with the latest industry trends.</p>
                     <p>When I'm not working on IT projects, I enjoy contributing to open-source communities, writing technical blogs, and preparing study materials for certifications like CCNA and cybersecurity fundamentals.</p>
                     
