--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Wazuh on Proxmox Installation Guide</h3>
-                        <p class="project-description">A comprehensive guide to installing Wazuh security monitoring as a virtual machine on Proxmox VE.</p>
+                        <p class="project-description">A comprehensive guide to installing Wazuh security monitoring (SIEM) as a virtual machine on Proxmox VE.</p>
                         <div class="project-tags">
                             <span class="tag">Security</span>
                             <span class="tag">Proxmox</span>
