--- a/index.html
+++ b/index.html
@@ -1338,7 +1338,7 @@ Password: admin</div>
                     <div class="other-content">
                         <h3>IT ServiceDesk Knowledge Test</h3>
                         <p>Training materials for IT service desk professionals and help desk technicians.</p>
-                        <a href="https://ozborndrew.github.io/ITServiceDesk/" class="btn" target="_blank">Explore Resources</a>
+                        <a href="https://ozborndrew.github.io/ITServiceDesk/" class="btn" target="_blank">Start Preparing</a>
                     </div>
                 </div>
                 <div class="other-card">
