--- a/index.html
+++ b/index.html
@@ -1318,7 +1318,7 @@ Password: admin</div>
                     <div class="other-content">
                         <h3>CCNA Exam Knowledge Test</h3>
                         <p>Practice tests and study materials for the Cisco Certified Network Associate certification.</p>
-                        <a href="https://ozborndrew.github.io/CCNA_Exam/" class="btn" target="_blank">Start Preparing</a>
+                        <a href="https://ozborndrew.github.io/CCNA_Exam/" class="btn" target="_blank">Start Exam</a>
                     </div>
                 </div>
                 <div class="other-card">
@@ -1328,7 +1328,7 @@ Password: admin</div>
                     <div class="other-content">
                         <h3>CompTIA Security+ Knowledge Test</h3>
                         <p>Resources to help you prepare for the CompTIA Security+ certification exam.</p>
-                        <a href="https://ozborndrew.github.io/CompTIA-Security/" class="btn" target="_blank">Start Preparing</a>
+                        <a href="https://ozborndrew.github.io/CompTIA-Security/" class="btn" target="_blank">Start Exam</a>
                     </div>
                 </div>
                 <div class="other-card">
@@ -1338,7 +1338,7 @@ Password: admin</div>
                     <div class="other-content">
                         <h3>IT ServiceDesk Knowledge Test</h3>
                         <p>Training materials for IT service desk professionals and help desk technicians.</p>
-                        <a href="https://ozborndrew.github.io/ITServiceDesk/" class="btn" target="_blank">Start Preparing</a>
+                        <a href="https://ozborndrew.github.io/ITServiceDesk/" class="btn" target="_blank">Start Exam</a>
                     </div>
                 </div>
                 <div class="other-card">
@@ -1348,7 +1348,7 @@ Password: admin</div>
                     <div class="other-content">
                         <h3>CompTIA A+ Knowledge Test</h3>
                         <p>Study materials for the CompTIA A+ certification, the starting point for IT careers.</p>
-                        <a href="https://ozborndrew.github.io/CompTIA-A-plus/" class="btn" target="_blank">Start Preparing</a>
+                        <a href="https://ozborndrew.github.io/CompTIA-A-plus/" class="btn" target="_blank">Start Exam</a>
                     </div>
                 </div>
                 <div class="other-card">
@@ -1358,7 +1358,7 @@ Password: admin</div>
                     <div class="other-content">
                         <h3>Cybersecurity Knowledge Test</h3>
                         <p>Practice tests and study guides for various cybersecurity certifications.</p>
-                        <a href="https://ozborndrew.github.io/CyberSecPrepTest/" class="btn" target="_blank">Start Preparing</a>
+                        <a href="https://ozborndrew.github.io/CyberSecPrepTest/" class="btn" target="_blank">Start Exam</a>
                     </div>
                 </div>
                 <div class="other-card">
@@ -1368,7 +1368,7 @@ Password: admin</div>
                     <div class="other-content">
                         <h3>CompTIA Network+ Knowledge Test</h3>
                         <p>Resources to help you prepare for the CompTIA Network+ certification exam.</p>
-                        <a href="https://ozborndrew.github.io/CompTIA-Network/" class="btn" target="_blank">Start Preparing</a>
+                        <a href="https://ozborndrew.github.io/CompTIA-Network/" class="btn" target="_blank">Start Exam</a>
                     </div>
                 </div>
             </div>
